add upgrade instructions

--- a/_posts/2019-02-02-mpf-0-52-released.md
+++ b/_posts/2019-02-02-mpf-0-52-released.md
@@ -46,6 +46,26 @@ A few new hardware platforms are supported in 0.52:
 * Raspberry Pi DMD support
 * Pololu Tic Stepper Controller
 
+Upgrade instructions
+--------------------
+
+To upgrade, use pip:
+
+~~~~
+pip install --upgrade mpf mpf-mc
+~~~~
+
+Note: if you installed mpf with ```pip3``` or ```kivy -m pip3```, you'll need to use the same pip command as you did then.
+
+If you use MPF Monitor, that will need an upgrade too
+
+~~~~
+pip install --upgrade mpf-monitor
+~~~~
+
+* If you were using a workaround for "use_sound_setting", it is no longer necessary as that bug has been fixed
+* If you have switches tagged as "playfield_active" and use them in a device, you will need to remove those tags (MPF will complain on startup)
+
 Documentation
 -------------
 
