add hardware platforms

--- a/_projects/f14.md
+++ b/_projects/f14.md
@@ -8,6 +8,6 @@ finished:
 documentation_link:
 code_link: https://github.com/Snux/F14-MPF
 gameplay_link:
-boardsets:
+boardsets: Snux
 lights:
 ---
