add monitor features to list

--- a/_posts/2020-11-07-mpf-0-54-released.md
+++ b/_posts/2020-11-07-mpf-0-54-released.md
@@ -30,6 +30,7 @@ New Features
 ------------
 
 - Support for Ubuntu 20.04 (see install instructions)
+- MPF Monitor support light shapes, color correction and a lot new features @kylenahas
 - Batched lighting updates for supported platforms
 - Delayed pulse-on-hit rule (for supported platforms)
 - Error codes for many common errors, especially config file errors
