--- a/_posts/2020-11-07-mpf-0-54-released.md
+++ b/_posts/2020-11-07-mpf-0-54-released.md
@@ -4,7 +4,7 @@ author: jab
 title: MPF 0.54 has been released
 tags: [0.54, MPF]
 ---
-Today, we release MPF 0.54.
+Today, we released MPF 0.54.
 0.53 users should be able to upgrade with small or no changes to their config.
 This post only mentions some highlights and you can alternatively read the
 [full release notes](http://docs.missionpinball.org/en/dev/versions/release_notes.html)
