update docs links

--- a/_posts/2018-11-24-mpf-0-51-released.md
+++ b/_posts/2018-11-24-mpf-0-51-released.md
@@ -13,7 +13,7 @@ MPF 0.51 Has Been Released
 Today, we release MPF 0.51 as a maintainance release to 0.50.
 0.50 users should be able to upgrade with only minor changes to their config (if any).
 This post only mentions some highlights and you can alternatively read the
-[full release notes](http://docs.missionpinball.org/en/dev/versions/release_notes.html)
+[full release notes](https://docs.missionpinball.org/en/dev/versions/release_notes.html)
 in the [MPF docs](http://docs.missionpinball.org).
 
 Performance Improvements
@@ -55,8 +55,8 @@ We refactored the interfaces for accelerometers and steppers to support more
 hardware platforms.
 However, we believe that this only affects very few users.
 Please refer to the
-[stepper config reference](http://docs.missionpinball.org/en/latest/config/steppers.html) and
-[accelerometer config reference](http://docs.missionpinball.org/en/latest/config/accelerometers.html)
+[stepper config reference](https://docs.missionpinball.org/config/steppers.html) and
+[accelerometer config reference](https://docs.missionpinball.org/config/accelerometers.html)
 for details.
 
 New Hardware Support
