--- a/_posts/2019-02-02-mpf-0-52-released.md
+++ b/_posts/2019-02-02-mpf-0-52-released.md
@@ -13,14 +13,14 @@ MPF 0.52 Has Been Released
 Today, we release MPF 0.52 as a maintainance release to 0.51.
 0.51 users should be able to upgrade with no changes to their config.
 This post only mentions some highlights and you can alternatively read the
-[full release notes](http://docs.missionpinball.org/en/dev/versions/release_notes.html)
+[full release notes](https://docs.missionpinball.org/en/dev/versions/release_notes.html)
 in the [MPF docs](http://docs.missionpinball.org).
 
 Python 3.7 Support and newer Ruamel
 -----------------------------------
 
 MPF 0.52 supports Python 3.7 which will hit mainstream soon.
-It improves performance in some areas.  
+It improves performance in some areas.
 Additionally, we updated to a newer version of our YAML
 parsing library which should yield some startup performance improvements.
 
