--- a/_posts/2020-01-11-mpf-0-53-released.md
+++ b/_posts/2020-01-11-mpf-0-53-released.md
@@ -7,7 +7,7 @@ tags: [0.53, MPF]
 Today, we release MPF 0.53 as a maintainance release to 0.52.
 0.51 users should be able to upgrade with small or no changes to their config.
 This post only mentions some highlights and you can alternatively read the
-[full release notes](http://docs.missionpinball.org/en/dev/versions/release_notes.html)
+[full release notes](https://docs.missionpinball.org/en/dev/versions/release_notes.html)
 in the [MPF docs](http://docs.missionpinball.org).
 
 Breaking changes in config
@@ -35,7 +35,7 @@ Tested documentation
 
 Documentation snippets are automatically tested now.
 They generally do not crash MPF and we also show you the test case to see what else is tested.
-See our [blog post about tested examples](http://missionpinball.org/2019/12/20/tested-example-in-the-docs.html) for details. 
+See our [blog post about tested examples](http://missionpinball.org/2019/12/20/tested-example-in-the-docs.html) for details.
 
 VPX Support
 -----------
@@ -56,7 +56,7 @@ Polishing
 
 Some areas received polishing:
 
-* OPP improvements 
+* OPP improvements
 * LISY support improve a lot and gained new features
 * A lot of error message improvements
 * Performance has been improved for events, placeholders and lights
