--- a/_posts/2020-11-07-mpf-0-54-released.md
+++ b/_posts/2020-11-07-mpf-0-54-released.md
@@ -7,7 +7,7 @@ tags: [0.54, MPF]
 Today, we released MPF 0.54.
 0.53 users should be able to upgrade with small or no changes to their config.
 This post only mentions some highlights and you can alternatively read the
-[full release notes](http://docs.missionpinball.org/en/dev/versions/release_notes.html)
+[full release notes](https://docs.missionpinball.org/en/dev/versions/release_notes.html)
 in the [MPF docs](http://docs.missionpinball.org).
 
 Breaking changes in config
@@ -70,10 +70,10 @@ New Config Options
 Bug Fixes
 ---------
 
-- BCP event handlers for active mode change events 
-- Fixed StateMachine bug that prevents MPF Monitor from connecting 
-- Fixed issue with `#` character in config values @seanirby 
-- Fixed VPX `set_fade()` function for consistency with other platforms @Wolfmarsh 
+- BCP event handlers for active mode change events
+- Fixed StateMachine bug that prevents MPF Monitor from connecting
+- Fixed issue with `#` character in config values @seanirby
+- Fixed VPX `set_fade()` function for consistency with other platforms @Wolfmarsh
 - FlasherPlayer now defaults to "on" to play default color, instead of "white"
 - Lazy-load zip image pools
 - Improved messaging and context for errors
@@ -84,7 +84,7 @@ Bug Fixes
 - Improved support for OPP platform
 - Improved switch hit timing detection for timed switches and delay/ignore windows
 - Prevent crash on credits counter when encountering corrupted data
-- Prevent adding new players during ball/game end @seanirby 
+- Prevent adding new players during ball/game end @seanirby
 - Prioritized loading of `named_colors` before mode config validation
 
 Other
@@ -95,11 +95,11 @@ Other
 * Major refactor of config file validation
 * Many new and improved tests
 * New assertions for platform feature support
-* New compiled pinproc libraries for Windows @qcapen 
+* New compiled pinproc libraries for Windows @qcapen
 * Performance improvements for event handling
 * Refactored BallDevice validation for specific switch, counter, and ejector devices
 
-See [full release notes](http://docs.missionpinball.org/en/dev/versions/release_notes.html)
+See [full release notes](https://docs.missionpinball.org/en/dev/versions/release_notes.html)
 for more details.
 
 Upgrade Instructions
