--- a/_posts/2021-07-25-mpf-0-55-released.md
+++ b/_posts/2021-07-25-mpf-0-55-released.md
@@ -7,7 +7,7 @@ tags: [0.55, MPF]
 Today, we released MPF 0.55.
 0.54 users should be able to upgrade with small or no changes to their config.
 This post only mentions some highlights, and you can alternatively read the
-[full release notes](http://docs.missionpinball.org/en/dev/versions/release_notes.html)
+[full release notes](https://docs.missionpinball.org/en/dev/versions/release_notes.html)
 in the [MPF docs](http://docs.missionpinball.org).
 
 Breaking changes in config
@@ -39,7 +39,7 @@ New Features
 - RGB segment displays
 - New hardware: FAST segment displays
 - Segment displays emulator
-- Animations for segment displays 
+- Animations for segment displays
 - New command: "mpf hardware benchmark"
 - Improved servo support
 - Support switches in Pololu Tic
@@ -55,7 +55,7 @@ New Config Options
 - New delay setting for all config players to delay execution
 - New option enabled for displays
 - New option max_hold_duration for coils to prevent burning your coils by accident
-- Persist_frame on images 
+- Persist_frame on images
 - logic_block_timeout for all logic blocks (counters, accruals and sequences)
 - Added block in sound_player
 - New option stop_timeout_after_last_move in servos
@@ -76,7 +76,7 @@ Bug Fixes
 - Fix ball search behavior for diverters
 - Fixed bitmap font bugs
 
-See [full release notes](http://docs.missionpinball.org/en/dev/versions/release_notes.html)
+See [full release notes](https://docs.missionpinball.org/en/dev/versions/release_notes.html)
 for more details.
 
 Upgrade Instructions
